MDEV-28001 greatest/least with bigint unsigned maxium has unexpected results compared to 0

LEAST() and GREATEST() erroneously calcucalted the result as signed
for BIGINT UNSIGNED arguments.

Adding a new method for unsigned arguments:
  Item_func_min_max::val_uint_native()